// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendrer adresseform riktig ved folkeregistrert bostedsadresse 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
}

.c3 {
  font-size: 11px;
}

.c2 {
  margin-top: 3px;
}

.c2 .typo-etikett-liten {
  line-height: 1rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c4 > * {
  margin-left: 1em;
}

.c1 {
  margin-top: 2em;
}

<div>
  <h2
    className="typo-undertittel"
  >
    Adresse
  </h2>
  <form
    onSubmit={[Function]}
  >
    <fieldset
      className="c0"
      disabled={false}
    >
      <div
        className="inputPanelGruppe"
      >
        <fieldset
          className="skjema__fieldset"
        >
          <legend
            className="skjema__legend"
          >
            
          </legend>
          <div
            className="inputPanelGruppe__inner"
          >
            <label
              className="inputPanel radioPanel inputPanel--checked"
              htmlFor="Helt tilfeldig ID"
            >
              <input
                aria-checked={true}
                checked={true}
                className="inputPanel__field"
                disabled={undefined}
                id="Helt tilfeldig ID"
                name="Velg adressetype"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value="folkeregistrert"
              />
              <span
                className="inputPanel__label"
              >
                Bostedsadresse fra folkeregisteret
              </span>
            </label>
            <label
              className="inputPanel radioPanel"
              htmlFor="Helt tilfeldig ID"
            >
              <input
                aria-checked={false}
                checked={false}
                className="inputPanel__field"
                disabled={undefined}
                id="Helt tilfeldig ID"
                name="Velg adressetype"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value="midlertidigNorge"
              />
              <span
                className="inputPanel__label"
              >
                Midlertidig adresse i Norge
              </span>
            </label>
            <label
              className="inputPanel radioPanel"
              htmlFor="Helt tilfeldig ID"
            >
              <input
                aria-checked={false}
                checked={false}
                className="inputPanel__field"
                disabled={undefined}
                id="Helt tilfeldig ID"
                name="Velg adressetype"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value="midlertidigUtland"
              />
              <span
                className="inputPanel__label"
              >
                Midlertidig adresse i utlandet
              </span>
            </label>
          </div>
        </fieldset>
        <div
          aria-live="assertive"
          role="alert"
        />
      </div>
      <div
        className="c1"
      >
        <div>
          <p
            className="typo-undertekst"
          >
            Islandsgate 49
          </p>
          <p
            className="typo-undertekst"
          >
            7693 Hovedøya
          </p>
        </div>
        <div
          className="c2"
        >
          <p
            className="typo-etikett-liten"
          >
            <span
              className="c3"
            >
              Endret 
              25.11.2017
               
              i Folkeregisteret
            </span>
          </p>
        </div>
      </div>
      <div
        className="c4"
      >
        <button
          className="knapp knapp--standard knapp--disabled"
          disabled={true}
          onClick={[Function]}
          type="submit"
        >
          Avbryt
        </button>
        <button
          className="knapp knapp--hoved knapp--disabled"
          disabled={true}
          type="submit"
        >
          Endre adresse
        </button>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`Rendrer adresseform riktig ved midlertidig gateadresse 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c5 > * {
  margin-left: 1em;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  -webkit-flex: 4;
  -ms-flex: 4;
  flex: 4;
  margin-left: 15px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  margin-top: 2em;
}

<div>
  <h2
    className="typo-undertittel"
  >
    Adresse
  </h2>
  <form
    onSubmit={[Function]}
  >
    <fieldset
      className="c0"
      disabled={false}
    >
      <div
        className="inputPanelGruppe"
      >
        <fieldset
          className="skjema__fieldset"
        >
          <legend
            className="skjema__legend"
          >
            
          </legend>
          <div
            className="inputPanelGruppe__inner"
          >
            <label
              className="inputPanel radioPanel"
              htmlFor="Helt tilfeldig ID"
            >
              <input
                aria-checked={false}
                checked={false}
                className="inputPanel__field"
                disabled={undefined}
                id="Helt tilfeldig ID"
                name="Velg adressetype"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value="folkeregistrert"
              />
              <span
                className="inputPanel__label"
              >
                Bostedsadresse fra folkeregisteret
              </span>
            </label>
            <label
              className="inputPanel radioPanel inputPanel--checked"
              htmlFor="Helt tilfeldig ID"
            >
              <input
                aria-checked={true}
                checked={true}
                className="inputPanel__field"
                disabled={undefined}
                id="Helt tilfeldig ID"
                name="Velg adressetype"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value="midlertidigNorge"
              />
              <span
                className="inputPanel__label"
              >
                Midlertidig adresse i Norge
              </span>
            </label>
            <label
              className="inputPanel radioPanel"
              htmlFor="Helt tilfeldig ID"
            >
              <input
                aria-checked={false}
                checked={false}
                className="inputPanel__field"
                disabled={undefined}
                id="Helt tilfeldig ID"
                name="Velg adressetype"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value="midlertidigUtland"
              />
              <span
                className="inputPanel__label"
              >
                Midlertidig adresse i utlandet
              </span>
            </label>
          </div>
        </fieldset>
        <div
          aria-live="assertive"
          role="alert"
        />
      </div>
      <div
        className="c1"
      >
        <div
          className="skjemaelement"
        >
          <label
            className="skjemaelement__label"
            htmlFor="Helt tilfeldig ID"
          >
            Adressetype
          </label>
          <div
            className="selectContainer input--m"
          >
            <select
              className="skjemaelement__input"
              disabled={false}
              id="Helt tilfeldig ID"
              onChange={[Function]}
              value="0"
            >
              <option
                value={0}
              >
                Gateadresse
              </option>
              <option
                value={1}
              >
                Områdeadresse (uten veinavn)
              </option>
              <option
                value={2}
              >
                Postboksadresse
              </option>
            </select>
          </div>
          <div
            aria-live="assertive"
            role="alert"
          />
        </div>
        <div
          className="skjemaelement"
        >
          <label
            className="skjemaelement__label"
            htmlFor="Helt tilfeldig ID"
          >
            Merkes med C/O
          </label>
          <input
            className="skjemaelement__input input--xxl"
            id="Helt tilfeldig ID"
            name={undefined}
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            aria-live="assertive"
            role="alert"
          />
        </div>
        <div
          className="c2"
        >
          <div
            style={
              Object {
                "flex": 4,
                "marginRight": 15,
              }
            }
          >
            <div
              className="skjemaelement"
            >
              <label
                className="skjemaelement__label"
                htmlFor="Helt tilfeldig ID"
              >
                Gateadresse
              </label>
              <input
                className="skjemaelement__input input--xxl"
                id="Helt tilfeldig ID"
                name={undefined}
                onChange={[Function]}
                type="text"
                value="Islandsgate"
              />
              <div
                aria-live="assertive"
                role="alert"
              />
            </div>
          </div>
          <div
            className="skjemaelement"
          >
            <label
              className="skjemaelement__label"
              htmlFor="Helt tilfeldig ID"
            >
              Husnummer
            </label>
            <input
              className="skjemaelement__input input--s"
              id="Helt tilfeldig ID"
              name={undefined}
              onChange={[Function]}
              type="text"
              value="49"
            />
            <div
              aria-live="assertive"
              role="alert"
            />
          </div>
          <div
            className="skjemaelement"
          >
            <label
              className="skjemaelement__label"
              htmlFor="Helt tilfeldig ID"
            >
              Husbokstav
            </label>
            <input
              className="skjemaelement__input input--s"
              id="Helt tilfeldig ID"
              name={undefined}
              onChange={[Function]}
              type="text"
              value=""
            />
            <div
              aria-live="assertive"
              role="alert"
            />
          </div>
          <div
            className="skjemaelement"
          >
            <label
              className="skjemaelement__label"
              htmlFor="Helt tilfeldig ID"
            >
              Bolignummer
            </label>
            <input
              className="skjemaelement__input input--s"
              id="Helt tilfeldig ID"
              name={undefined}
              onChange={[Function]}
              type="text"
              value=""
            />
            <div
              aria-live="assertive"
              role="alert"
            />
          </div>
        </div>
        <div
          className="c3"
        >
          <div
            className="skjemaelement"
          >
            <label
              className="skjemaelement__label"
              htmlFor="Helt tilfeldig ID"
            >
              Postnummer
            </label>
            <input
              className="skjemaelement__input input--s"
              id="Helt tilfeldig ID"
              name={undefined}
              onChange={[Function]}
              type="text"
              value="7693"
            />
            <div
              aria-live="assertive"
              role="alert"
            />
          </div>
          <div
            className="c4"
          >
            <div
              className="skjemaelement"
            >
              <label
                className="skjemaelement__label"
                htmlFor="Helt tilfeldig ID"
              >
                Poststed
              </label>
              <input
                className="skjemaelement__input input--xxl"
                disabled={true}
                id="Helt tilfeldig ID"
                name={undefined}
                type="text"
                value="Hovedøya"
              />
              <div
                aria-live="assertive"
                role="alert"
              />
            </div>
          </div>
        </div>
        <label
          className="skjemaelement__label"
          htmlFor="gateform-datovelger"
        >
          Gyldig til
        </label>
        <div
          onBlur={[Function]}
          onKeyDown={[Function]}
          tabIndex={undefined}
        >
          <div
            className="nav-datovelger"
          >
            <p
              className="sr-only"
              id="Helt tilfeldig ID_srDesc"
            >
              Dato må være mellom "02.01.1970" og "01.01.1971". 
            </p>
            <div
              className="nav-datovelger__inputContainer"
            >
              <input
                aria-describedby="Helt tilfeldig ID_srDesc"
                aria-invalid={false}
                autoComplete="off"
                autoCorrect="off"
                className="nav-datovelger__input"
                disabled={undefined}
                id="gateform-datovelger"
                maxLength={10}
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                pattern="\\\\d{2}.\\\\d{2}.\\\\d{4}"
                type="text"
                value=""
              />
              <button
                aria-expanded={false}
                aria-label="Kalender"
                className="nav-datovelger__kalenderknapp"
                disabled={undefined}
                onClick={[Function]}
                role="button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  height={16}
                  role="presentation"
                  viewBox="0 0 18 18"
                  width={16}
                >
                  <title>
                    Kalenderikon
                  </title>
                  <g
                    fill="none"
                    fillRule="evenodd"
                    stroke="#0067C5"
                  >
                    <path
                      d="M4 2.667H1.333v14h15.334v-14H14"
                    />
                    <path
                      d="M4 1.333h2V4H4zm8 0h2V4h-2zM6 2h6M1.333 6h15.334"
                    />
                  </g>
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c5"
      >
        <button
          className="knapp knapp--standard knapp--disabled"
          disabled={true}
          onClick={[Function]}
          type="submit"
        >
          Avbryt
        </button>
        <button
          className="knapp knapp--hoved knapp--disabled"
          disabled={true}
          type="submit"
        >
          Endre adresse
        </button>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`Rendrer adresseform riktig ved midlertidig matrikkeladresse 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c4 > * {
  margin-left: 1em;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  -webkit-flex: 4;
  -ms-flex: 4;
  flex: 4;
  margin-left: 15px;
}

.c1 {
  margin-top: 2em;
}

<div>
  <h2
    className="typo-undertittel"
  >
    Adresse
  </h2>
  <form
    onSubmit={[Function]}
  >
    <fieldset
      className="c0"
      disabled={false}
    >
      <div
        className="inputPanelGruppe"
      >
        <fieldset
          className="skjema__fieldset"
        >
          <legend
            className="skjema__legend"
          >
            
          </legend>
          <div
            className="inputPanelGruppe__inner"
          >
            <label
              className="inputPanel radioPanel"
              htmlFor="Helt tilfeldig ID"
            >
              <input
                aria-checked={false}
                checked={false}
                className="inputPanel__field"
                disabled={undefined}
                id="Helt tilfeldig ID"
                name="Velg adressetype"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value="folkeregistrert"
              />
              <span
                className="inputPanel__label"
              >
                Bostedsadresse fra folkeregisteret
              </span>
            </label>
            <label
              className="inputPanel radioPanel inputPanel--checked"
              htmlFor="Helt tilfeldig ID"
            >
              <input
                aria-checked={true}
                checked={true}
                className="inputPanel__field"
                disabled={undefined}
                id="Helt tilfeldig ID"
                name="Velg adressetype"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value="midlertidigNorge"
              />
              <span
                className="inputPanel__label"
              >
                Midlertidig adresse i Norge
              </span>
            </label>
            <label
              className="inputPanel radioPanel"
              htmlFor="Helt tilfeldig ID"
            >
              <input
                aria-checked={false}
                checked={false}
                className="inputPanel__field"
                disabled={undefined}
                id="Helt tilfeldig ID"
                name="Velg adressetype"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value="midlertidigUtland"
              />
              <span
                className="inputPanel__label"
              >
                Midlertidig adresse i utlandet
              </span>
            </label>
          </div>
        </fieldset>
        <div
          aria-live="assertive"
          role="alert"
        />
      </div>
      <div
        className="c1"
      >
        <div
          className="skjemaelement"
        >
          <label
            className="skjemaelement__label"
            htmlFor="Helt tilfeldig ID"
          >
            Adressetype
          </label>
          <div
            className="selectContainer input--m"
          >
            <select
              className="skjemaelement__input"
              disabled={false}
              id="Helt tilfeldig ID"
              onChange={[Function]}
              value="1"
            >
              <option
                value={0}
              >
                Gateadresse
              </option>
              <option
                value={1}
              >
                Områdeadresse (uten veinavn)
              </option>
              <option
                value={2}
              >
                Postboksadresse
              </option>
            </select>
          </div>
          <div
            aria-live="assertive"
            role="alert"
          />
        </div>
        <div
          className="skjemaelement"
        >
          <label
            className="skjemaelement__label"
            htmlFor="Helt tilfeldig ID"
          >
            Merkes med C/O
          </label>
          <input
            className="skjemaelement__input input--xxl"
            id="Helt tilfeldig ID"
            name={undefined}
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            aria-live="assertive"
            role="alert"
          />
        </div>
        <div
          className="skjemaelement"
        >
          <label
            className="skjemaelement__label"
            htmlFor="Helt tilfeldig ID"
          >
            Områdeadresse
          </label>
          <input
            className="skjemaelement__input input--xxl"
            id="Helt tilfeldig ID"
            name={undefined}
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            aria-live="assertive"
            role="alert"
          />
        </div>
        <div
          className="c2"
        >
          <div
            className="skjemaelement"
          >
            <label
              className="skjemaelement__label"
              htmlFor="Helt tilfeldig ID"
            >
              Postnummer
            </label>
            <input
              className="skjemaelement__input input--s"
              id="Helt tilfeldig ID"
              name={undefined}
              onChange={[Function]}
              type="text"
              value="5468"
            />
            <div
              aria-live="assertive"
              role="alert"
            />
          </div>
          <div
            className="c3"
          >
            <div
              className="skjemaelement"
            >
              <label
                className="skjemaelement__label"
                htmlFor="Helt tilfeldig ID"
              >
                Poststed
              </label>
              <input
                className="skjemaelement__input input--xxl"
                disabled={true}
                id="Helt tilfeldig ID"
                name={undefined}
                type="text"
                value="Lillomarka"
              />
              <div
                aria-live="assertive"
                role="alert"
              />
            </div>
          </div>
        </div>
        <label
          className="skjemaelement__label"
          htmlFor="postboksadresse-gyldig-til"
        >
          Gyldig til
        </label>
        <div
          onBlur={[Function]}
          onKeyDown={[Function]}
          tabIndex={undefined}
        >
          <div
            className="nav-datovelger"
          >
            <p
              className="sr-only"
              id="Helt tilfeldig ID_srDesc"
            >
              Dato må være mellom "02.01.1970" og "01.01.1971". 
            </p>
            <div
              className="nav-datovelger__inputContainer"
            >
              <input
                aria-describedby="Helt tilfeldig ID_srDesc"
                aria-invalid={false}
                autoComplete="off"
                autoCorrect="off"
                className="nav-datovelger__input"
                disabled={undefined}
                id="postboksadresse-gyldig-til"
                maxLength={10}
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                pattern="\\\\d{2}.\\\\d{2}.\\\\d{4}"
                type="text"
                value=""
              />
              <button
                aria-expanded={false}
                aria-label="Kalender"
                className="nav-datovelger__kalenderknapp"
                disabled={undefined}
                onClick={[Function]}
                role="button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  height={16}
                  role="presentation"
                  viewBox="0 0 18 18"
                  width={16}
                >
                  <title>
                    Kalenderikon
                  </title>
                  <g
                    fill="none"
                    fillRule="evenodd"
                    stroke="#0067C5"
                  >
                    <path
                      d="M4 2.667H1.333v14h15.334v-14H14"
                    />
                    <path
                      d="M4 1.333h2V4H4zm8 0h2V4h-2zM6 2h6M1.333 6h15.334"
                    />
                  </g>
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c4"
      >
        <button
          className="knapp knapp--standard knapp--disabled"
          disabled={true}
          onClick={[Function]}
          type="submit"
        >
          Avbryt
        </button>
        <button
          className="knapp knapp--hoved knapp--disabled"
          disabled={true}
          type="submit"
        >
          Endre adresse
        </button>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`Rendrer adresseform riktig ved midlertidig postboksadresse 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c5 > * {
  margin-left: 1em;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  -webkit-flex: 4;
  -ms-flex: 4;
  flex: 4;
  margin-left: 15px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  margin-top: 2em;
}

<div>
  <h2
    className="typo-undertittel"
  >
    Adresse
  </h2>
  <form
    onSubmit={[Function]}
  >
    <fieldset
      className="c0"
      disabled={false}
    >
      <div
        className="inputPanelGruppe"
      >
        <fieldset
          className="skjema__fieldset"
        >
          <legend
            className="skjema__legend"
          >
            
          </legend>
          <div
            className="inputPanelGruppe__inner"
          >
            <label
              className="inputPanel radioPanel"
              htmlFor="Helt tilfeldig ID"
            >
              <input
                aria-checked={false}
                checked={false}
                className="inputPanel__field"
                disabled={undefined}
                id="Helt tilfeldig ID"
                name="Velg adressetype"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value="folkeregistrert"
              />
              <span
                className="inputPanel__label"
              >
                Bostedsadresse fra folkeregisteret
              </span>
            </label>
            <label
              className="inputPanel radioPanel inputPanel--checked"
              htmlFor="Helt tilfeldig ID"
            >
              <input
                aria-checked={true}
                checked={true}
                className="inputPanel__field"
                disabled={undefined}
                id="Helt tilfeldig ID"
                name="Velg adressetype"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value="midlertidigNorge"
              />
              <span
                className="inputPanel__label"
              >
                Midlertidig adresse i Norge
              </span>
            </label>
            <label
              className="inputPanel radioPanel"
              htmlFor="Helt tilfeldig ID"
            >
              <input
                aria-checked={false}
                checked={false}
                className="inputPanel__field"
                disabled={undefined}
                id="Helt tilfeldig ID"
                name="Velg adressetype"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value="midlertidigUtland"
              />
              <span
                className="inputPanel__label"
              >
                Midlertidig adresse i utlandet
              </span>
            </label>
          </div>
        </fieldset>
        <div
          aria-live="assertive"
          role="alert"
        />
      </div>
      <div
        className="c1"
      >
        <div
          className="skjemaelement"
        >
          <label
            className="skjemaelement__label"
            htmlFor="Helt tilfeldig ID"
          >
            Adressetype
          </label>
          <div
            className="selectContainer input--m"
          >
            <select
              className="skjemaelement__input"
              disabled={false}
              id="Helt tilfeldig ID"
              onChange={[Function]}
              value="2"
            >
              <option
                value={0}
              >
                Gateadresse
              </option>
              <option
                value={1}
              >
                Områdeadresse (uten veinavn)
              </option>
              <option
                value={2}
              >
                Postboksadresse
              </option>
            </select>
          </div>
          <div
            aria-live="assertive"
            role="alert"
          />
        </div>
        <div
          className="skjemaelement"
        >
          <label
            className="skjemaelement__label"
            htmlFor="Helt tilfeldig ID"
          >
            Merkes med C/O
          </label>
          <input
            className="skjemaelement__input input--xxl"
            id="Helt tilfeldig ID"
            name={undefined}
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            aria-live="assertive"
            role="alert"
          />
        </div>
        <div
          className="c2"
        >
          <div
            style={
              Object {
                "flex": 4,
                "marginRight": 15,
              }
            }
          >
            <div
              className="skjemaelement"
            >
              <label
                className="skjemaelement__label"
                htmlFor="Helt tilfeldig ID"
              >
                Postboksanlegg
              </label>
              <input
                className="skjemaelement__input input--xxl"
                id="Helt tilfeldig ID"
                name={undefined}
                onChange={[Function]}
                type="text"
                value=""
              />
              <div
                aria-live="assertive"
                role="alert"
              />
            </div>
          </div>
          <div
            className="skjemaelement"
          >
            <label
              className="skjemaelement__label"
              htmlFor="Helt tilfeldig ID"
            >
              Postboksnummer
            </label>
            <input
              className="skjemaelement__input input--s"
              id="Helt tilfeldig ID"
              name={undefined}
              onChange={[Function]}
              type="text"
              value="9698"
            />
            <div
              aria-live="assertive"
              role="alert"
            />
          </div>
        </div>
        <div
          className="c3"
        >
          <div
            className="skjemaelement"
          >
            <label
              className="skjemaelement__label"
              htmlFor="Helt tilfeldig ID"
            >
              Postnummer
            </label>
            <input
              className="skjemaelement__input input--s"
              id="Helt tilfeldig ID"
              name={undefined}
              onChange={[Function]}
              type="text"
              value="7705"
            />
            <div
              aria-live="assertive"
              role="alert"
            />
          </div>
          <div
            className="c4"
          >
            <div
              className="skjemaelement"
            >
              <label
                className="skjemaelement__label"
                htmlFor="Helt tilfeldig ID"
              >
                Poststed
              </label>
              <input
                className="skjemaelement__input input--xxl"
                disabled={true}
                id="Helt tilfeldig ID"
                name={undefined}
                type="text"
                value="Færder fyr"
              />
              <div
                aria-live="assertive"
                role="alert"
              />
            </div>
          </div>
        </div>
        <label
          className="skjemaelement__label"
          htmlFor="postboksadresse-gyldig-til"
        >
          Gyldig til
        </label>
        <div
          onBlur={[Function]}
          onKeyDown={[Function]}
          tabIndex={undefined}
        >
          <div
            className="nav-datovelger"
          >
            <p
              className="sr-only"
              id="Helt tilfeldig ID_srDesc"
            >
              Dato må være mellom "02.01.1970" og "01.01.1971". 
            </p>
            <div
              className="nav-datovelger__inputContainer"
            >
              <input
                aria-describedby="Helt tilfeldig ID_srDesc"
                aria-invalid={false}
                autoComplete="off"
                autoCorrect="off"
                className="nav-datovelger__input"
                disabled={undefined}
                id="postboksadresse-gyldig-til"
                maxLength={10}
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                pattern="\\\\d{2}.\\\\d{2}.\\\\d{4}"
                type="text"
                value=""
              />
              <button
                aria-expanded={false}
                aria-label="Kalender"
                className="nav-datovelger__kalenderknapp"
                disabled={undefined}
                onClick={[Function]}
                role="button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  height={16}
                  role="presentation"
                  viewBox="0 0 18 18"
                  width={16}
                >
                  <title>
                    Kalenderikon
                  </title>
                  <g
                    fill="none"
                    fillRule="evenodd"
                    stroke="#0067C5"
                  >
                    <path
                      d="M4 2.667H1.333v14h15.334v-14H14"
                    />
                    <path
                      d="M4 1.333h2V4H4zm8 0h2V4h-2zM6 2h6M1.333 6h15.334"
                    />
                  </g>
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c5"
      >
        <button
          className="knapp knapp--standard knapp--disabled"
          disabled={true}
          onClick={[Function]}
          type="submit"
        >
          Avbryt
        </button>
        <button
          className="knapp knapp--hoved knapp--disabled"
          disabled={true}
          type="submit"
        >
          Endre adresse
        </button>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`Rendrer adresseform riktig ved midlertidig utenlandsadresse 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c4 > * {
  margin-left: 1em;
}

.c2 {
  margin-right: 2em;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  margin-top: 2em;
}

<div>
  <h2
    className="typo-undertittel"
  >
    Adresse
  </h2>
  <form
    onSubmit={[Function]}
  >
    <fieldset
      className="c0"
      disabled={false}
    >
      <div
        className="inputPanelGruppe"
      >
        <fieldset
          className="skjema__fieldset"
        >
          <legend
            className="skjema__legend"
          >
            
          </legend>
          <div
            className="inputPanelGruppe__inner"
          >
            <label
              className="inputPanel radioPanel"
              htmlFor="Helt tilfeldig ID"
            >
              <input
                aria-checked={false}
                checked={false}
                className="inputPanel__field"
                disabled={undefined}
                id="Helt tilfeldig ID"
                name="Velg adressetype"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value="folkeregistrert"
              />
              <span
                className="inputPanel__label"
              >
                Bostedsadresse fra folkeregisteret
              </span>
            </label>
            <label
              className="inputPanel radioPanel"
              htmlFor="Helt tilfeldig ID"
            >
              <input
                aria-checked={false}
                checked={false}
                className="inputPanel__field"
                disabled={undefined}
                id="Helt tilfeldig ID"
                name="Velg adressetype"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value="midlertidigNorge"
              />
              <span
                className="inputPanel__label"
              >
                Midlertidig adresse i Norge
              </span>
            </label>
            <label
              className="inputPanel radioPanel inputPanel--checked"
              htmlFor="Helt tilfeldig ID"
            >
              <input
                aria-checked={true}
                checked={true}
                className="inputPanel__field"
                disabled={undefined}
                id="Helt tilfeldig ID"
                name="Velg adressetype"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value="midlertidigUtland"
              />
              <span
                className="inputPanel__label"
              >
                Midlertidig adresse i utlandet
              </span>
            </label>
          </div>
        </fieldset>
        <div
          aria-live="assertive"
          role="alert"
        />
      </div>
      <div
        className="c1"
      >
        <div>
          <div
            className="c2"
          >
            <div
              className="skjemaelement"
            >
              <label
                className="skjemaelement__label"
                htmlFor="Helt tilfeldig ID"
              >
                Land
              </label>
              <div
                className="selectContainer input--m"
              >
                <select
                  className="skjemaelement__input"
                  disabled={false}
                  id="Helt tilfeldig ID"
                  onChange={[Function]}
                  value="SYD"
                >
                  <option
                    disabled={true}
                    value=""
                  >
                    Velg land
                  </option>
                  <option
                    value="BMU"
                  >
                    BERMUDA
                     (
                    BMU
                    )
                  </option>
                  <option
                    value="COL"
                  >
                    COLOMBIA
                     (
                    COL
                    )
                  </option>
                  <option
                    value="LVS"
                  >
                    LANGTVEKKISTAN
                     (
                    LVS
                    )
                  </option>
                  <option
                    value="MRS"
                  >
                    MARS
                     (
                    MRS
                    )
                  </option>
                  <option
                    value="NRN"
                  >
                    NARNIA
                     (
                    NRN
                    )
                  </option>
                  <option
                    value="NOR"
                  >
                    NORGE
                     (
                    NOR
                    )
                  </option>
                  <option
                    value="ESP"
                  >
                    SPANIA
                     (
                    ESP
                    )
                  </option>
                  <option
                    value="SYD"
                  >
                    SYDEN
                     (
                    SYD
                    )
                  </option>
                  <option
                    value="USA"
                  >
                    USA
                     (
                    USA
                    )
                  </option>
                  <option
                    value="UTL"
                  >
                    UTLANDET
                     (
                    UTL
                    )
                  </option>
                </select>
              </div>
              <div
                aria-live="assertive"
                role="alert"
              />
            </div>
          </div>
        </div>
        <div
          className="c3"
        >
          <div
            style={
              Object {
                "flex": 4,
                "marginRight": 15,
              }
            }
          >
            <div
              className="skjemaelement"
            >
              <label
                className="skjemaelement__label"
                htmlFor="Helt tilfeldig ID"
              >
                Adresselinje 1
              </label>
              <input
                className="skjemaelement__input input--xxl"
                id="Helt tilfeldig ID"
                name={undefined}
                onChange={[Function]}
                type="text"
                value="Ut av landet"
              />
              <div
                aria-live="assertive"
                role="alert"
              />
            </div>
          </div>
        </div>
        <div
          className="c3"
        >
          <div
            style={
              Object {
                "flex": 4,
                "marginRight": 15,
              }
            }
          >
            <div
              className="skjemaelement"
            >
              <label
                className="skjemaelement__label"
                htmlFor="Helt tilfeldig ID"
              >
                Adresselinje 2
              </label>
              <input
                className="skjemaelement__input input--xxl"
                id="Helt tilfeldig ID"
                name={undefined}
                onChange={[Function]}
                type="text"
                value="Rundt svingen"
              />
              <div
                aria-live="assertive"
                role="alert"
              />
            </div>
          </div>
        </div>
        <div
          className="c3"
        >
          <div
            style={
              Object {
                "flex": 4,
                "marginRight": 15,
              }
            }
          >
            <div
              className="skjemaelement"
            >
              <label
                className="skjemaelement__label"
                htmlFor="Helt tilfeldig ID"
              >
                Adresselinje 3
              </label>
              <input
                className="skjemaelement__input input--xxl"
                id="Helt tilfeldig ID"
                name={undefined}
                onChange={[Function]}
                type="text"
                value=""
              />
              <div
                aria-live="assertive"
                role="alert"
              />
            </div>
          </div>
        </div>
        <label
          className="skjemaelement__label"
          htmlFor="utlandsadresse-datovelger"
        >
          Gyldig til
        </label>
        <div
          onBlur={[Function]}
          onKeyDown={[Function]}
          tabIndex={undefined}
        >
          <div
            className="nav-datovelger"
          >
            <p
              className="sr-only"
              id="Helt tilfeldig ID_srDesc"
            >
              Dato må være mellom "02.01.1970" og "01.01.1971". 
            </p>
            <div
              className="nav-datovelger__inputContainer"
            >
              <input
                aria-describedby="Helt tilfeldig ID_srDesc"
                aria-invalid={false}
                autoComplete="off"
                autoCorrect="off"
                className="nav-datovelger__input"
                disabled={undefined}
                id="utlandsadresse-datovelger"
                maxLength={10}
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                pattern="\\\\d{2}.\\\\d{2}.\\\\d{4}"
                type="text"
                value=""
              />
              <button
                aria-expanded={false}
                aria-label="Kalender"
                className="nav-datovelger__kalenderknapp"
                disabled={undefined}
                onClick={[Function]}
                role="button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  height={16}
                  role="presentation"
                  viewBox="0 0 18 18"
                  width={16}
                >
                  <title>
                    Kalenderikon
                  </title>
                  <g
                    fill="none"
                    fillRule="evenodd"
                    stroke="#0067C5"
                  >
                    <path
                      d="M4 2.667H1.333v14h15.334v-14H14"
                    />
                    <path
                      d="M4 1.333h2V4H4zm8 0h2V4h-2zM6 2h6M1.333 6h15.334"
                    />
                  </g>
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c4"
      >
        <button
          className="knapp knapp--standard knapp--disabled"
          disabled={true}
          onClick={[Function]}
          type="submit"
        >
          Avbryt
        </button>
        <button
          className="knapp knapp--hoved knapp--disabled"
          disabled={true}
          type="submit"
        >
          Endre adresse
        </button>
      </div>
    </fieldset>
  </form>
</div>
`;
